@@ -1,3 +1,8 @@
+2009-05-15  Ulrich Drepper  <drepper@redhat.com>
+
+	* elf/check-execstack.c: New file.
+	* elf/Makefile: Add rules to build and run check-execstack.
+
 2009-05-10  Ulrich Drepper  <drepper@redhat.com>
 
 	* version.h (VERSION): Bump to 2.10.1.
